--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -310,6 +310,21 @@ nav img {
 
 /* END OF HOME PAGE CSS */
 
+/* ABOUT US PAGE */
+#aboutOmidRow {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.aboutOmiCol {
+	flex: 50%;
+	max-width: 50%;
+	padding: 0 30px;
+	margin-bottom: 30px;
+}
+/* END OF ABOUT US PAGE */
+
 /* DETAIL PRODUCT PAGE CSS */
 .detailProductCon {
 	padding: 5% 0;
@@ -443,6 +458,14 @@ nav img {
 		visibility: visible;
 	}
 
+	/* ABOUT US PAGE */
+	.aboutOmiCol {
+		flex: 50%;
+		max-width: 50%;
+		padding: 0 30px;
+	}
+	/* END OF ABOUT US PAGE */
+
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
 		padding: 5% 0;
@@ -566,6 +589,14 @@ nav img {
 		display: none;
 		visibility: hidden;
 	}
+
+	/* ABOUT US PAGE */
+	.aboutOmiCol {
+		flex: 100%;
+		max-width: 100%;
+		padding: 0 10px;
+	}
+	/* END OF ABOUT US PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
@@ -722,6 +753,14 @@ nav img {
 		padding: 15% 0;
 	}
 	/* END OFCAROUSEL BANNER */
+
+	/* ABOUT US PAGE */
+	.aboutOmiCol {
+		flex: 100%;
+		max-width: 100%;
+		padding: 0 10px;
+	}
+	/* END OF ABOUT US PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
