--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -323,6 +323,17 @@ nav img {
 	padding: 0 30px;
 	margin-bottom: 30px;
 }
+
+.prodCatFlexRow {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.prodCatFlexCol {
+	flex: 20%;
+	max-width: 20%;
+}
+
 /* END OF ABOUT US PAGE */
 
 /* DETAIL PRODUCT PAGE CSS */
@@ -774,6 +785,11 @@ nav img {
 		flex: 100%;
 		max-width: 100%;
 		padding: 0 10px;
+	}
+
+	.prodCatFlexCol {
+		flex: 50%;
+		max-width: 50%;
 	}
 	/* END OF ABOUT US PAGE */
 
