--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -307,7 +307,6 @@ nav img {
 	padding: 5% 0;
 }
 /* END OF CTA SIGNUP */
-
 /* END OF HOME PAGE CSS */
 
 /* ABOUT US PAGE */
@@ -343,8 +342,27 @@ nav img {
 	flex: 20%;
 	max-width: 20%;
 }
-
 /* END OF ABOUT US PAGE */
+
+/* BLOG PAGE */
+.flexRow-blog {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.flexCol-blog {
+	flex: 33.3%;
+	max-width: 33.3%;
+}
+
+.card-deck .card .card-body p {
+	margin-top: 24px;
+	font-size: 14px;
+	color: rgb(116, 116, 116);
+}
+/* END OF BLOG PAGE */
 
 /* DETAIL PRODUCT PAGE CSS */
 .detailProductCon {
@@ -487,6 +505,20 @@ nav img {
 	}
 	/* END OF ABOUT US PAGE */
 
+	/* BLOG PAGE */
+	.flexRow-blog {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.flexCol-blog {
+		flex: 33.3%;
+		max-width: 33.3%;
+	}
+	/* END OF BLOG PAGE */
+
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
 		padding: 5% 0;
@@ -624,6 +656,20 @@ nav img {
 		padding: 0 10px;
 	}
 	/* END OF ABOUT US PAGE */
+
+	/* BLOG PAGE */
+	.flexRow-blog {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.flexCol-blog {
+		flex: 50%;
+		max-width: 50%;
+	}
+	/* END OF BLOG PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
@@ -806,6 +852,20 @@ nav img {
 		width: 100%;
 	}
 	/* END OF ABOUT US PAGE */
+
+	/* BLOG PAGE */
+	.flexRow-blog {
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.flexCol-blog {
+		flex: 100%;
+		max-width: 100%;
+	}
+	/* END OF BLOG PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
 	.detailProductCon {
