--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -349,12 +349,13 @@ nav img {
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: center;
 }
 
 .flexCol-blog {
-	flex: 33.3%;
-	max-width: 33.3%;
+	padding: 24px 16px;
+	flex: 25%;
+	max-width: 25%;
 }
 
 .card-deck .card .card-body p {
@@ -366,11 +367,13 @@ nav img {
 #blog-detail img {
 	margin: 24px 0;
 }
-
 #blog-detail span {
 	font-size: 20px;
 	font-weight: 300;
 	font-style: italic;
+}
+#blog-detail p {
+	margin-top: 24px;
 }
 /* END OF BLOG PAGE */
 
