--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -355,30 +355,26 @@ nav img {
 .flexCol-blog {
 	flex: 25%;
 	max-width: 25%;
+	padding: 0 12px;
 }
 
-.card-deck .card .card-body p {
+.card .card-body p {
 	margin-top: 24px;
 	font-size: 14px;
 	color: rgb(116, 116, 116);
 }
 
-#blog-detail {
-	padding: 0;
-	width: auto;
+#blog-detail img {
+	width: 100%;
+	height: auto;
+	margin: 24px 0;
 }
 
-#blog-detail span {
-	font-size: 20px;
-	font-weight: 300;
-	font-style: italic;
-}
-#blog-detail p {
+#blog-detail .container-xl a {
 	margin-top: 24px;
-}
-#blog-detail .container img {
-	width: 100% !important;
-	height: auto !important;
+	padding: 16px 24px;
+	color: #fff;
+	background-color: var(--primary);
 }
 /* END OF BLOG PAGE */
 
@@ -534,6 +530,7 @@ nav img {
 	.flexCol-blog {
 		flex: 33.3%;
 		max-width: 33.3%;
+		padding: 12px;
 	}
 	/* END OF BLOG PAGE */
 
@@ -686,6 +683,7 @@ nav img {
 	.flexCol-blog {
 		flex: 50%;
 		max-width: 50%;
+		padding: 12px;
 	}
 	/* END OF BLOG PAGE */
 
@@ -882,7 +880,9 @@ nav img {
 	.flexCol-blog {
 		flex: 100%;
 		max-width: 100%;
+		padding: 12px 0;
 	}
+
 	/* END OF BLOG PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
