--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -289,7 +289,7 @@ nav img {
 	box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.1);
 }
 #teaserProduct .card-img-top {
-	background-color: var(--omidlightgreen);
+	background-color: var(--secondary);
 }
 #teaserProduct .card .badge {
 	position: absolute;
@@ -427,7 +427,31 @@ ol li {
 }
 /* END OF BLOG PAGE */
 
-/* DETAIL PRODUCT PAGE CSS */
+/* SHOPPING PRODUCT PAGE CSS */
+#shoppingProduct a {
+	color: var(--primary);
+}
+#shoppingProduct .card {
+	cursor: pointer;
+}
+#shoppingProduct .card:hover {
+	border: none;
+	transform: scale(1.01, 1.01) !important;
+	transition: 0.3s;
+	box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.1);
+}
+#shoppingProduct .card-img-top {
+	background-color: var(--secondary);
+}
+#shoppingProduct .card .badge {
+	position: absolute;
+	top: 16px;
+	right: 8px;
+	width: auto;
+	padding: 4px 8px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
 .detailProductCon {
 	padding: 5% 0;
 }
@@ -435,7 +459,7 @@ ol li {
 .detailProduct {
 	margin-left: 30px;
 }
-/* END OF DETAIL PRODUCT PAGE CSS */
+/* END OF SHOPPING PRODUCT PAGE CSS */
 
 /* CART PAGE */
 .cart-card-title {
