--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -479,6 +479,14 @@ ol li {
 .rmv button {
 	text-align: right !important;
 }
+
+.summary .card {
+	border: none;
+	box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+}
+.summary .card p {
+	margin-bottom: 4px !important;
+}
 /* END OF CART PAGE */
 
 /* CONTACT US */
