--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -523,7 +523,6 @@ ol li {
 }
 .dashboardCard:hover {
 	box-shadow: 0px 15px 25px -5px rgba(0, 0, 0, 0.15);
-	border: none;
 	transition: 0.3s;
 	margin-top: -4px;
 }
@@ -533,7 +532,7 @@ ol li {
 }
 
 #orderCard .card-body {
-	padding: 0;
+	padding: 0 16px;
 	overflow: scroll;
 }
 
@@ -543,6 +542,15 @@ ol li {
 
 #usercard .card-body {
 	padding: 0;
+	overflow: scroll;
+}
+
+#productCard {
+	max-height: 500px;
+}
+
+#productCard .card-body {
+	padding: 0 16px;
 	overflow: scroll;
 }
 /* END OF PROFILE */
