--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -416,7 +416,7 @@ nav img {
 
 #blog-detail img {
 	width: 100%;
-	height: auto;
+	height: 480px !important;
 	margin: 24px 0;
 }
 #blog-detail ul li,
@@ -661,6 +661,12 @@ ol li {
 		max-width: 33.3%;
 		padding: 12px;
 	}
+
+	#blog-detail img {
+		width: 100%;
+		height: 480px !important;
+		margin: 24px 0;
+	}
 	/* END OF BLOG PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
@@ -803,6 +809,12 @@ ol li {
 		flex: 50%;
 		max-width: 50%;
 		padding: 12px;
+	}
+
+	#blog-detail img {
+		width: 100%;
+		height: 480px !important;
+		margin: 24px 0;
 	}
 	/* END OF BLOG PAGE */
 
@@ -1002,6 +1014,11 @@ ol li {
 		padding: 12px 0;
 	}
 
+	#blog-detail img {
+		width: 100%;
+		height: 240px !important;
+		margin: 24px 0;
+	}
 	/* END OF BLOG PAGE */
 
 	/* DETAIL PRODUCT PAGE CSS */
